# HexLife

./: .gitignore  CMakeLists.txt  README.md  config.json
include/: Config.h  Logger.h  Test.h
src/: Logger.cpp  Test.cpp  main.cpp
src/mapGen/: CMakeLists.txt  Common.h
src/mapGen/Environment/: Biome.cpp  Biome.h  BiomeHandler.cpp  BiomeHandler.h
src/mapGen/MapSystem/: Cell.cpp  Cell.h  Hex.cpp  Hex.h  HexGrid.cpp  HexGrid.h  MapVisualizer.cpp  MapVisualizer.h  WorldManager.cpp  WorldManager.h
src/mapGen/Noise/: NoiseGenerator.h  PerlinNoise.cpp  PerlinNoise.h
src/neat/: CMakeLists.txt
src/neat/evolution/: Mutator.cpp  Mutator.h  Population.h  Species.h
src/neat/genotype/: Gene.h  Genome.h
src/neat/phenotype/: Connection.h  Network.cpp  Network.h  Node.h
src/utils/: Config.cpp  Logger.cpp
